fix alignment of button link on dog sitting page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,7 @@ footer {
 
 .image-blue-box {
     width: 100%;
+    transform: scale(0.8);
 }
 
 .container-2 {
@@ -215,6 +216,7 @@ footer {
 
 .image-gold-box {
     width: 100%;
+    transform: scale(0.8);
 }
 
 #dog1 {
@@ -372,7 +374,6 @@ footer {
     float: left;
  }
 
-
  .send {
     font-family: Poppins, sans-serif;
     font-size: 130%;
@@ -405,7 +406,7 @@ footer {
         line-height: 5px;
     }
  
-     #menu {
+    #menu {
          font-size: medium;
          padding: 0;
          margin-top: 5px;
@@ -413,19 +414,33 @@ footer {
          margin-bottom: 10px;     
  }
 
-    #menu li {
+#menu li {
         display:inline-block;
     }
  
-     #intro-text {
+ #intro-text {
          margin-bottom: 50px;
  }
  
-     #background-image {
+ #background-image {
+        
      overflow: visible;
  }
 
  /* about us dog sitting and testimonial pages */
+
+.info-pages {
+    margin-bottom: 50px;
+}
+
+ #interested {
+    margin-left: 450px;
+}
+
+#button-for-contact{
+    margin-left: 450px;
+}
+
 
 .container-1 {
     display: flex;
@@ -524,6 +539,15 @@ footer {
   .main-title {
     font-size: 110%;
 }
+
+#interested {
+    margin-left: 350px;
+}
+
+#button-for-contact{
+    margin-left: 350px;
+}
+
 
  .container-1 {
     display: flex;
@@ -624,6 +648,15 @@ footer {
     .main-title {
         font-size: 100%;
     }
+
+    #interested {
+        margin-left: 300px;
+    }
+    
+    #button-for-contact{
+        margin-left: 300px;
+    }
+
 
 .container-1 {
     display: flex;
@@ -757,18 +790,32 @@ footer {
 /* about us, dog sitting and testimonial pages */
 
 .info-pages {
-    margin-bottom: 50px;
+    margin: 0px;
+
 }
      
 .main-title {
         font-size: 90%;
     }
 
+
+    .hl {
+        display: none;
+    }
+    
+    #interested {
+        margin-left: 200px;
+    }
+    
+    #button-for-contact{
+        margin-left: 200px;
+    }
+
 .container-1 {
     display: flex;
     flex-flow: row wrap;
-    width: 80%;
 }
+
 .container-1 > * {
     padding: 20px; 
     justify-content: center;
@@ -787,7 +834,6 @@ footer {
 .container-2 {
     display: flex;
     flex-flow: row wrap;
-    width: 80%;
 }
 .container-2 > * {
     padding: 20px; 
@@ -811,20 +857,21 @@ footer {
     flex-flow: row wrap;
     align-items: center;
     width: 100%;
-}
-
-.contact-form {
-    order: 1;
+    margin-bottom: 25px;
 }
 
 .thank-you-dog{
-    order: 2;
+    transform: scale(0.8);
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
+
 .message {
-    clear: both;
+    width: 80vw;
     margin-top: 10px;
-    height: 50px;
+    height: 400px;
 }
+
     
 }
 
@@ -916,16 +963,29 @@ footer {
 
 .info-pages {
     margin-bottom: 25px;
+    overflow: hidden;
 }
 
  .main-title {
         font-size: 80%;
     }
 
+.hl {
+    display: none;
+}
+
+#interested {
+    margin-left: 75px;
+}
+
+#button-for-contact{
+    margin-left: 75px;
+}
+
 .container-1 {
     display: flex;
     flex-flow: row wrap;
-    width: 80%;
+    max-width: 100vw;
 }
 .container-1 > * {
     padding: 10px;
@@ -942,11 +1002,16 @@ footer {
     justify-content: center;
 }
 
+.image-blue-box > img{
+    transform: scale(0.8);
+}
+
 .container-2 {
     display: flex;
     flex-flow: row wrap;
     width: 80%;
 }
+
 .container-2 > * {
     padding: 10px; 
     justify-content: center;
@@ -959,12 +1024,11 @@ footer {
 
 .image-gold-box {
     order: 2;
-    max-width: 80%;
 }
 
-.image-gold-box > img{
-    justify-content: center;
-    max-width: 80%;
+.image-gold-box > img {
+    transform: scale(0.8);
+  
 }
 
     
